added login, signup and content in about.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="nav-links">
             <a href="#" class="active"><i class="fas fa-home"></i> Home</a>
             <a href="products.html"><i class="fas fa-box"></i> Products</a>
-            <a href="#"><i class="fas fa-list"></i> Offers</a>
+             <a href="products.html#special-offers"><i class="fas fa-list"></i> Offers</a>
             <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
             <a href="#"><i class="fas fa-envelope"></i> Contact</a>
         </div>
@@ -28,7 +28,9 @@
             <button><i class="fas fa-search"></i></button>
         </div>
         <div class="icons">
-            <button class="icon-btn" title="Account"><i class="fas fa-user"></i></button>
+            <a href="login.html">
+            <button  class="icon-btn" title="Account"><i class="fas fa-user"></i></button>
+            </a>
             <button class="icon-btn" title="Wishlist"><i class="fas fa-heart"></i></button>
             <button class="icon-btn" title="Cart"><i class="fas fa-shopping-cart"></i></button>
         </div>
@@ -46,7 +48,7 @@
 
 
     <section class="categories">
-        <h2>Offers</h2>
+        <h2>Categories</h2>
         <div class="category-grid">
             <a href="products.html#laptops"  class="category-card">
                 <i class="fas fa-laptop"></i>
